--- a/css/style.css
+++ b/css/style.css
@@ -5,13 +5,21 @@ body, html {
 	color: #656c6d;
 	width: 100% !important;
 	height: 100% !important;
+	padding: 0;
 }
-
-
+ul, ol {
+	padding: 0;
+	webkit-padding: 0;
+	moz-padding: 0;
+}
+.section-title.center {
+	padding: 25px 0 45px 0;
+}
+/*Header*/
 .intro {
 	display: table;
 	width: 100%;
-	height: 100%;
+	height: auto;
 	padding: 0;
 	text-align: left;
 	color: #fff;
@@ -21,7 +29,6 @@ body, html {
 	background-size: cover;
 	-o-background-size: cover;
 }
-
 .intro h1 {
 	font-size: 60px;
 	font-weight: 500;
@@ -39,8 +46,82 @@ body, html {
 	margin-top: 20px;
 	margin-bottom: 40px;
 }
-
 header .intro-text{
 	padding-top: 300px;
 	padding-bottom: 200px;
+}
+
+/*Navigation*/
+#nav {
+	z-index: 999;
+	margin: 0;
+}
+#nav.affix{
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+.navbar-custom {
+	margin-bottom: 0;
+	background-color: #121d1f;
+	border-radius: 0px;
+	padding: 10px 0;
+}
+.navbar-custom .navbar-brand {  
+	font-weight: 600;
+}
+.navbar-custom .navbar-brand .navbar-toggle {
+	padding: 4px 6px;
+	font-size: 16px;
+	color: #fff;
+}
+.navbar-custom a {
+	color: #f4f5f6;
+}
+.navbar-custom .nav li a {
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	margin: 0;
+	-webkit-transition: background .3s ease-in-out;
+	-moz-transition: background .3s ease-in-out;
+	transition: background .3s ease-in-out;
+}
+.navbar-custom .nav li a:hover {
+	outline: 0;
+	color: #7bc3d1;
+	background-color: transparent;
+}
+.navbar-custom .nav li a:focus, .navbar-custom .nav li a:active {
+	outline: 0;
+	background-color: transparent;
+	color: #7bc3d1;
+}
+.navbar-custom .nav li.active {
+	outline: 0;
+}
+.navbar-custom .nav li.active a {
+	background-color: rgba(255,255,255,.3);
+}
+.navbar-custom .nav li.active a:hover {
+	color: #fff;
+}
+
+
+/*About*/
+#about {
+	padding: 100px 0;
+	background: #f6f6f6;
+}
+#about .about-text {
+	margin-left: 10px;
+}
+#about img {
+	border-radius: 50%;
+	width: 200px;
+	height: 200px;
+	display: inline-block;
+}
+#about p {
+	margin-top: 20px;
+	margin-bottom: 30px;
 }
