--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body, html {
 	color: #656c6d;
 	width: 100% !important;
 	height: 100% !important;
-	padding: 0;
 }
 ul, ol {
 	padding: 0;
@@ -213,4 +212,15 @@ header .intro-text{
 }
 .portfolio-item:hover .hover-text {
 	opacity: 1;
+}
+
+body.modal-open {
+    overflow: hidden;
+    position: absolute;
+    width: 100%;
+    height:100%;
+}
+
+.modal li{
+	margin-left: 20px;
 }
