--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,49 @@ body.modal-open {
 	margin-bottom: 0;
 }
 
+#contact {
+	padding: 100px 0 40px 0;
+	color: #121d1f;
+	background: #7bc3d1;
+}
+#contact h2 {
+	color: #fff;
+}
+#contact hr {
+	background: rgba(255,255,255,0.3);
+}
+#contact h3 {
+	padding-top: 20px;
+	font-size: 20px;
+	font-weight: 400;
+	color: #fff;
+}
+#contact form {
+	padding: 30px 0;
+}
+#contact .btn {
+	background: transparent;
+	color: white;
+	border-color: white;
+	border-radius:0;
+	font-size:15px;
+	padding: 10px 23px;
+	margin-top: 30px;
+}
+#contact .btn:hover, #contact .btn:focus {
+	color:white ;
+	background-color: #121d1f;
+	border: 1px solid #121d1f;
+}
+.btn:active, .btn.active {
+	background-image: none;
+	outline: 0;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+
+
+
 
 @media(min-width:768px) {
 .timeline:before {
