--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,20 @@ body.modal-open {
 	box-shadow: none;
 }
 
+#contact .social {
+	margin-top: 60px;
+}
+#contact .social ul li {
+	display: inline-block;
+	margin: 0 20px;
+}
+#contact .social i.fab {
+	font-size: 30px;
+	padding: 4px 5px;
+	color: #fff;
+	transition: all 0.5s;
+}
+
 
 
 
